<resources>
    <string name="app_name">News App</string>
    <string name="txt_login">Login</string>
    <string name="txt_please_sign_in_to_continue">Please Sign In to continue</string>
    <string name="txt_image_view">Image View</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_don_t_have_an_account">Don’t have an account?</string>
    <string name="txt_sign_up">Sign up</string>
    <string name="txt_forget_password">Forget Password</string>
    <string name="txt_please_fill_the_input_below_here">Please fill the input below here</string>
    <string name="txt_create_account">Create Account</string>
    <string name="txt_back">back</string>
    <string name="txt_fullname">Fullname</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_9_feb_2021">9, Feb 2021</string>
    <string name="error_text">Not Empty</string>
    <string name="text_user">Users</string>
    <string name="error_pass">Password Mismatch</string>
    <string name="error_regis">Register Failed</string>
    <string name="txt_button">Button</string>
    <string name="txt_send">Send</string>
    <string name="txt_breaking_news">Breaking News</string>
    <string name="txt_highlight">Does Rio Die in ‘Money Heist’?</string>
    <string name="txt_lee_jeno">Lee Jeno</string>
    <string name="txt_all">All</string>
    <string name="txt_international">International</string>
    <string name="txt_media">Media</string>
    <string name="txt_magazine">Magazine</string>
    <string name="txt_business">Business</string>
    <string name="title_items">Umbrella Academy Secretly Confirmed <b>Vanya Is The Apocalypse All Along</b></string>
    <string name="dummy_date">15/02/21</string>
    <string name="dummy_duration">12 min read</string>
    <string name="tv_title_item">Umbrella Academy Secretly Confirmed Vanya Is The Apocalypse All Along</string>
    <string name="content_desc">If you’ve just started Money Heist Part 3, it makes sense that you would be concerned about little Rio (Miguel Herrán). But you don’t have to worry about his death. No, Rio does not die in Money Heist. As for his psychological health? That’s another matter entirely.</string>
    <string name="txt_na_jaemin">Na Jaemin</string>
    <string name="txt_jaemin_email">na.jaemin@gmail.com</string>
    <string name="txt_preference">Preference</string>
    <string name="txt_dark_mode">Dark Mode</string>
    <string name="txt_account">Account</string>
    <string name="txt_notification">Notification</string>
    <string name="txt_change_account">Change Account</string>
    <string name="txt_language">Language</string>
    <string name="txt_bookmark">Bookmark</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_privacy_and_setting_help">Privacy and Setting Help</string>
    <string name="txt_log_out">Log Out</string>
    <string name="txt_image_button">Image Button</string>
    <string name="txt_edit_account">Edit Account</string>
</resources>