<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_news"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="@dimen/_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/iv_item_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/txt_image_view"
            android:scaleType="centerCrop"
            android:src="@drawable/umbrella_news" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_date_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawableStart="@drawable/ic_calendar"
        android:text="@string/dummy_date"
        android:maxWidth="@dimen/_100dp"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="@+id/cv_item_news"
        app:layout_constraintStart_toEndOf="@+id/cv_item_news" />

    <TextView
        android:id="@+id/tv_duration_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/dummy_duration"
        android:maxWidth="@dimen/_100dp"
        android:maxLines="2"
        android:drawableStart="@drawable/ic_time"
        app:layout_constraintBottom_toBottomOf="@+id/cv_item_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_date_item" />

    <TextView
        android:id="@+id/tv_title_item"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/tv_title_item"
        android:textSize="18sp"
        android:maxLines="3"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cv_item_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_item_news"
        app:layout_constraintTop_toTopOf="@+id/cv_item_news"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>