<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_profile"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/foto_dummy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.002"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/txt_9_feb_2021"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/civ_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/civ_profile"
            app:layout_constraintTop_toTopOf="@+id/civ_profile" />

        <ImageButton
            android:id="@+id/ib_profile_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.914"
            app:layout_constraintStart_toEndOf="@+id/tv_date"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            android:contentDescription="@string/txt_image_view"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_person" />

        <TextView
            android:id="@+id/tv_title_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/txt_breaking_news"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_main"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="@dimen/_16dp"
            app:cardElevation="@dimen/_16dp"
            app:cardCornerRadius="@dimen/_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_lable" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_20dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/main_banner"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/txt_image_view"
                        android:background="@color/white"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:id="@+id/tv_highlight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_highlight"
                    android:layout_below="@id/card_image"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/_20sp"
                    android:textColor="@color/black"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_author_main"
                    android:layout_width="@dimen/_30dp"
                    android:layout_height="@dimen/_30dp"
                    android:src="@drawable/foto_author"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_below="@id/tv_highlight"/>
                <TextView
                    android:id="@+id/tv_name_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_lee_jeno"
                    android:layout_toEndOf="@id/iv_author_main"
                    android:layout_below="@id/tv_highlight"
                    android:layout_marginTop="@dimen/_16dp"/>
                <TextView
                    android:id="@+id/tv_date_highlight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_9_feb_2021"
                    android:textSize="@dimen/_16sp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@id/tv_highlight"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
         <HorizontalScrollView
             android:id="@+id/hs_topic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/card_main">
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/tv_all"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txt_all"
                     android:textSize="@dimen/_20sp"
                     android:layout_marginStart="@dimen/_16dp"
                     android:layout_marginEnd="@dimen/_16dp"
                     android:layout_marginTop="@dimen/_16dp"
                     android:layout_marginBottom="@dimen/_8dp"/>
                 <TextView
                     android:id="@+id/tv_international"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txt_international"
                     android:textSize="@dimen/_20sp"
                     android:layout_toEndOf="@id/tv_all"
                     android:layout_marginStart="@dimen/_16dp"
                     android:layout_marginEnd="@dimen/_16dp"
                     android:layout_marginTop="@dimen/_16dp"
                     android:layout_marginBottom="@dimen/_8dp"/>
                 <TextView
                     android:id="@+id/tv_media"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txt_media"
                     android:textSize="@dimen/_20sp"
                     android:layout_toEndOf="@id/tv_international"
                     android:layout_marginStart="@dimen/_16dp"
                     android:layout_marginEnd="@dimen/_16dp"
                     android:layout_marginTop="@dimen/_16dp"
                     android:layout_marginBottom="@dimen/_8dp"/>
                 <TextView
                     android:id="@+id/tv_magazine"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txt_magazine"
                     android:textSize="@dimen/_20sp"
                     android:layout_toEndOf="@id/tv_media"
                     android:layout_marginStart="@dimen/_16dp"
                     android:layout_marginEnd="@dimen/_16dp"
                     android:layout_marginTop="@dimen/_16dp"
                     android:layout_marginBottom="@dimen/_8dp"/>
                 <TextView
                     android:id="@+id/tv_business"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txt_business"
                     android:textSize="@dimen/_20sp"
                     android:layout_toEndOf="@id/tv_magazine"
                     android:layout_marginStart="@dimen/_16dp"
                     android:layout_marginEnd="@dimen/_16dp"
                     android:layout_marginTop="@dimen/_16dp"
                     android:layout_marginRight="@dimen/_16dp"
                     android:layout_marginBottom="@dimen/_8dp"/>
             </RelativeLayout>
         </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintTop_toBottomOf="@id/hs_topic"
            tools:listitem="@layout/news_item">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>